# sentiment-analysis

./: Dockerfile  README.md  pyproject.toml
src/tweet_sentiment_analysis/: live_plot.py  sentiment_analyser.py  twitter_credential.py
twitter-sentiment/: live_plot.py  sentiment_analyser.py  twitter_credential.py
