[tool.poetry]
name = "tweet-sentiment-analysis"
version = "0.0.2"
description = "Data science project on predicting mood of a city from tweets.\n Credits to Anna Scaife @ Big Data Africa Summer School"
authors = ["me"]
license = "BSD-3-Clause"
readme = 'README.md'

packages = [
    { include = "tweet_sentiment_analysis", from = "src" }
]
include = [
    { path = 'tests'}
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.2"
tweepy = "^3.7.0"
textblob = "^0.15.3"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.1.2"
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint-junit = "^0.3.2"
coverage = "^6.1.1"
pytest-json-report = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
